update office hours endpoint location
